update new features

--- a/tfidf.ipynb
+++ b/tfidf.ipynb
@@ -12,13 +12,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-12-02T18:27:24.267862400Z",
-     "start_time": "2023-12-02T18:27:24.225882600Z"
+     "end_time": "2023-12-06T16:01:58.829175300Z",
+     "start_time": "2023-12-06T16:01:58.823600900Z"
     }
    },
    "outputs": [],
@@ -27,7 +27,8 @@
     "import re\n",
     "import numpy as np\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.metrics.pairwise import cosine_similarity, linear_kernel"
+    "from sklearn.metrics.pairwise import cosine_similarity, linear_kernel\n",
+    "from googletrans import Translator"
    ]
   },
   {
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "outputs": [],
    "source": [
     "file = pd.read_excel('shortcourses2566.xlsx')"
@@ -50,11 +51,40 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-02T18:27:25.314041900Z",
-     "start_time": "2023-12-02T18:27:24.230145500Z"
+     "end_time": "2023-12-06T16:02:00.041648Z",
+     "start_time": "2023-12-06T16:01:58.835708300Z"
     }
    },
    "id": "d3da61f397b9ca5d"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Translate title to english "
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "e03155d2afd736eb"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "outputs": [],
+   "source": [
+    "translator = Translator()\n",
+    "def translate_eng(title):\n",
+    "    translation = translator.translate(title, dest='en')\n",
+    "    return translation.text"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-06T16:02:00.440861600Z",
+     "start_time": "2023-12-06T16:02:00.045215900Z"
+    }
+   },
+   "id": "c368d2c6cb469623"
   },
   {
    "cell_type": "markdown",
@@ -68,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "outputs": [],
    "source": [
     "def clean_title(title):\n",
@@ -77,8 +107,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-02T18:27:25.322214600Z",
-     "start_time": "2023-12-02T18:27:25.314041900Z"
+     "end_time": "2023-12-06T16:02:00.449421900Z",
+     "start_time": "2023-12-06T16:02:00.443578Z"
     }
    },
    "id": "e4dc26afbc54f2c0"
@@ -95,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "outputs": [],
    "source": [
     "content = file['หลักสูตรอบรมระยะสั้น'].drop_duplicates().fillna('')\n",
@@ -105,8 +135,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-02T18:27:25.328926100Z",
-     "start_time": "2023-12-02T18:27:25.322214600Z"
+     "end_time": "2023-12-06T16:02:00.462314800Z",
+     "start_time": "2023-12-06T16:02:00.449421900Z"
     }
    },
    "id": "b3f21aedd43e6caf"
@@ -123,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
    "outputs": [],
    "source": [
     "tfidf = TfidfVectorizer(stop_words='english')\n",
@@ -132,8 +162,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-02T18:27:25.356282500Z",
-     "start_time": "2023-12-02T18:27:25.328926100Z"
+     "end_time": "2023-12-06T16:02:00.483634900Z",
+     "start_time": "2023-12-06T16:02:00.465316700Z"
     }
    },
    "id": "cb5cd99f50462dca"
@@ -150,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 33,
    "outputs": [],
    "source": [
     "cosine_similarities = linear_kernel(tfidf_matrix)"
@@ -158,8 +188,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-02T18:27:25.356282500Z",
-     "start_time": "2023-12-02T18:27:25.340844200Z"
+     "end_time": "2023-12-06T16:02:00.483634900Z",
+     "start_time": "2023-12-06T16:02:00.473593500Z"
     }
    },
    "id": "ddf0d8ab318c7c87"
@@ -176,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
    "outputs": [],
    "source": [
     "def recommender_tfidf(course_name, limit):\n",
@@ -239,8 +269,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-02T18:27:25.356282500Z",
-     "start_time": "2023-12-02T18:27:25.353671600Z"
+     "end_time": "2023-12-06T16:02:00.493667900Z",
+     "start_time": "2023-12-06T16:02:00.480636700Z"
     }
    },
    "id": "991b48164c403112"
@@ -257,14 +287,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 35,
    "outputs": [
     {
      "data": {
       "text/plain": "                                                  Course  \\\nIndex                                                      \n43     การวินิจฉัยภาวะฉุกเฉินที่ไม่ได้เกิดจากอุบัติเห...   \n131    หลักการและพื้นฐานของเครื่องมือทางรังสีวิทยา (B...   \n152    เตรียมความพร้อมทางรังสีวิทยาสำหรับบุคลากรทางกา...   \n0                     Cancer Epidemiology and Prevention   \n1      Coaching Skill : Crafting a New You สำหรับนักศ...   \n2      Coaching Skill : Crafting a New You สำหรับบุคล...   \n3      Development Studies & Social Research Speciali...   \n4                     Digital Transformation: e-Document   \n5      Environmental Economics (USAC programs) - Fall...   \n6      Global Citizenship – โรงเรียนมงฟอร์ตวิทยาลัย ส...   \n\n       Cosine Similarity Score  \nIndex                           \n43                    0.697794  \n131                   0.360553  \n152                   0.249083  \n0                     0.000000  \n1                     0.000000  \n2                     0.000000  \n3                     0.000000  \n4                     0.000000  \n5                     0.000000  \n6                     0.000000  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Course</th>\n      <th>Cosine Similarity Score</th>\n    </tr>\n    <tr>\n      <th>Index</th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>43</th>\n      <td>การวินิจฉัยภาวะฉุกเฉินที่ไม่ได้เกิดจากอุบัติเห...</td>\n      <td>0.697794</td>\n    </tr>\n    <tr>\n      <th>131</th>\n      <td>หลักการและพื้นฐานของเครื่องมือทางรังสีวิทยา (B...</td>\n      <td>0.360553</td>\n    </tr>\n    <tr>\n      <th>152</th>\n      <td>เตรียมความพร้อมทางรังสีวิทยาสำหรับบุคลากรทางกา...</td>\n      <td>0.249083</td>\n    </tr>\n    <tr>\n      <th>0</th>\n      <td>Cancer Epidemiology and Prevention</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Coaching Skill : Crafting a New You สำหรับนักศ...</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Coaching Skill : Crafting a New You สำหรับบุคล...</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Development Studies &amp; Social Research Speciali...</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Digital Transformation: e-Document</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>Environmental Economics (USAC programs) - Fall...</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>Global Citizenship – โรงเรียนมงฟอร์ตวิทยาลัย ส...</td>\n      <td>0.000000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 20,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,8 +305,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-02T18:27:25.369444400Z",
-     "start_time": "2023-12-02T18:27:25.356282500Z"
+     "end_time": "2023-12-06T16:02:00.504240100Z",
+     "start_time": "2023-12-06T16:02:00.497179600Z"
     }
    },
    "id": "c0f4db781812aba2"
@@ -293,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "outputs": [],
    "source": [
     "def recommender_tfidf_all_courses(course_name):\n",
@@ -354,22 +384,22 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-02T18:27:25.378461500Z",
-     "start_time": "2023-12-02T18:27:25.378461500Z"
+     "end_time": "2023-12-06T16:02:00.539140700Z",
+     "start_time": "2023-12-06T16:02:00.509120800Z"
     }
    },
    "id": "594104f8545fe00"
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 37,
    "outputs": [
     {
      "data": {
       "text/plain": "                                                  Course  Score\nIndex                                                          \n0                     Cancer Epidemiology and Prevention    0.0\n1      Coaching Skill : Crafting a New You สำหรับนักศ...    0.0\n2      Coaching Skill : Crafting a New You สำหรับบุคล...    0.0\n3      Development Studies & Social Research Speciali...    0.0\n4                     Digital Transformation: e-Document    0.0\n...                                                  ...    ...\n163                             เวชศาสตร์ครอบครัวขั้นสูง    0.0\n164    เวชศาสตร์ฟื้นฟูสำหรับแพทย์ฝึกอบรมเวชศาสตร์ฟื้น...    0.0\n165    แปลงจุดแข็ง เป็นคุณค่า สร้างชีวิตสู่ความสุข  (...    0.0\n166    แปลงจุดแข็ง เป็นคุณค่า สร้างชีวิตสู่ความสุข (S...    0.0\n167    “ฟูมฟักทักษะสำคัญในชีวิตและการทำงาน Skills4Lif...    0.0\n\n[167 rows x 2 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Course</th>\n      <th>Score</th>\n    </tr>\n    <tr>\n      <th>Index</th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Cancer Epidemiology and Prevention</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Coaching Skill : Crafting a New You สำหรับนักศ...</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Coaching Skill : Crafting a New You สำหรับบุคล...</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Development Studies &amp; Social Research Speciali...</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Digital Transformation: e-Document</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>163</th>\n      <td>เวชศาสตร์ครอบครัวขั้นสูง</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>164</th>\n      <td>เวชศาสตร์ฟื้นฟูสำหรับแพทย์ฝึกอบรมเวชศาสตร์ฟื้น...</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>165</th>\n      <td>แปลงจุดแข็ง เป็นคุณค่า สร้างชีวิตสู่ความสุข  (...</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>166</th>\n      <td>แปลงจุดแข็ง เป็นคุณค่า สร้างชีวิตสู่ความสุข (S...</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>167</th>\n      <td>“ฟูมฟักทักษะสำคัญในชีวิตและการทำงาน Skills4Lif...</td>\n      <td>0.0</td>\n    </tr>\n  </tbody>\n</table>\n<p>167 rows × 2 columns</p>\n</div>"
      },
-     "execution_count": 22,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,15 +410,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-02T18:27:25.418873400Z",
-     "start_time": "2023-12-02T18:27:25.385505800Z"
+     "end_time": "2023-12-06T16:02:00.540144500Z",
+     "start_time": "2023-12-06T16:02:00.513127400Z"
     }
    },
    "id": "791def1b6f809e22"
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 38,
    "outputs": [],
    "source": [
     "def recommender_tfidf_by_user(user_name, n_recommendations):\n",
@@ -417,22 +447,22 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-02T18:28:09.465019200Z",
-     "start_time": "2023-12-02T18:28:09.448715600Z"
+     "end_time": "2023-12-06T16:02:00.573234300Z",
+     "start_time": "2023-12-06T16:02:00.533588500Z"
     }
    },
    "id": "fdf28ef643836d21"
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 39,
    "outputs": [
     {
      "data": {
       "text/plain": "                                                  Course     Score\nIndex                                                             \n43     การวินิจฉัยภาวะฉุกเฉินที่ไม่ได้เกิดจากอุบัติเห...  0.697794\n42     การวินิจฉัยภาวะฉุกเฉินจากอุบัติเหตุ (Diagnosti...  0.697794\n131    หลักการและพื้นฐานของเครื่องมือทางรังสีวิทยา (B...  0.360553\n152    เตรียมความพร้อมทางรังสีวิทยาสำหรับบุคลากรทางกา...  0.249083\n140    หลักเศรษฐศาสตร์สาธารณสุข (Principle of Health ...  0.221962\n130    หลักการบริหารงานสาธารณสุข (Principle of Public...  0.193087\n133    หลักสูตรย่อยที่ 1 พื้นฐานการดูแลสุขภาพสัตว์เลี...  0.191831\n32     การตรวจวิเคราะห์พื้นฐานทางพิษวิทยาและการตรวจวิ...  0.180715\n154    เทคโนโลยีก๊าซชีวภาพ : หลักการการออกแบบ และการใ...  0.157094\n161    เรียนรู้การคิดเชิงออกแบบ (Design Thinking) : ท...  0.000000",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Course</th>\n      <th>Score</th>\n    </tr>\n    <tr>\n      <th>Index</th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>43</th>\n      <td>การวินิจฉัยภาวะฉุกเฉินที่ไม่ได้เกิดจากอุบัติเห...</td>\n      <td>0.697794</td>\n    </tr>\n    <tr>\n      <th>42</th>\n      <td>การวินิจฉัยภาวะฉุกเฉินจากอุบัติเหตุ (Diagnosti...</td>\n      <td>0.697794</td>\n    </tr>\n    <tr>\n      <th>131</th>\n      <td>หลักการและพื้นฐานของเครื่องมือทางรังสีวิทยา (B...</td>\n      <td>0.360553</td>\n    </tr>\n    <tr>\n      <th>152</th>\n      <td>เตรียมความพร้อมทางรังสีวิทยาสำหรับบุคลากรทางกา...</td>\n      <td>0.249083</td>\n    </tr>\n    <tr>\n      <th>140</th>\n      <td>หลักเศรษฐศาสตร์สาธารณสุข (Principle of Health ...</td>\n      <td>0.221962</td>\n    </tr>\n    <tr>\n      <th>130</th>\n      <td>หลักการบริหารงานสาธารณสุข (Principle of Public...</td>\n      <td>0.193087</td>\n    </tr>\n    <tr>\n      <th>133</th>\n      <td>หลักสูตรย่อยที่ 1 พื้นฐานการดูแลสุขภาพสัตว์เลี...</td>\n      <td>0.191831</td>\n    </tr>\n    <tr>\n      <th>32</th>\n      <td>การตรวจวิเคราะห์พื้นฐานทางพิษวิทยาและการตรวจวิ...</td>\n      <td>0.180715</td>\n    </tr>\n    <tr>\n      <th>154</th>\n      <td>เทคโนโลยีก๊าซชีวภาพ : หลักการการออกแบบ และการใ...</td>\n      <td>0.157094</td>\n    </tr>\n    <tr>\n      <th>161</th>\n      <td>เรียนรู้การคิดเชิงออกแบบ (Design Thinking) : ท...</td>\n      <td>0.000000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 26,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,8 +473,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-02T18:28:14.127820Z",
-     "start_time": "2023-12-02T18:28:14.107326700Z"
+     "end_time": "2023-12-06T16:02:00.605376400Z",
+     "start_time": "2023-12-06T16:02:00.537144800Z"
     }
    },
    "id": "e2425ec0689e85cb"
@@ -463,7 +493,7 @@
    "cell_type": "markdown",
    "source": [
     "https://practicaldatascience.co.uk/data-science/how-to-create-content-recommendations-using-tf-idf\n",
-    "https://medium.com/analytics-vidhya/how-to-do-a-content-based-filtering-using-tf-idf-f623487ed0fd"
+    "https://lukkiddd.com/tf-idf-%E0%B8%84%E0%B8%B3%E0%B9%84%E0%B8%AB%E0%B8%99%E0%B8%AA%E0%B8%B3%E0%B8%84%E0%B8%B1%E0%B8%8D%E0%B8%99%E0%B8%B0-dd1e1568312e"
    ],
    "metadata": {
     "collapsed": false
