--- a/knn.ipynb
+++ b/knn.ipynb
@@ -37,7 +37,8 @@
     "from scipy.spatial.distance import pdist, squareform\n",
     "from scipy.sparse import csr_matrix\n",
     "from sklearn.neighbors import NearestNeighbors\n",
-    "from fuzzywuzzy import process"
+    "from fuzzywuzzy import process\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error"
    ]
   },
   {
@@ -3419,14 +3420,11 @@
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'mean_squared_error' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[39], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMean Squared Error:\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[43mmean_squared_error\u001b[49m(predictions,y_test))\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMean Absolute Error:\u001b[39m\u001b[38;5;124m\"\u001b[39m, mean_absolute_error(predictions,y_test))\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'mean_squared_error' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error: 0.007003137210372987\n",
+      "Mean Absolute Error: 0.062384266163476164\n"
      ]
     }
    ],
@@ -3452,7 +3450,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
