--- a/tfidf.ipynb
+++ b/tfidf.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 609,
+   "execution_count": 38,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -35,7 +35,8 @@
     "from sklearn.model_selection import train_test_split\n",
     "import translators as ts\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
-    "from sklearn.metrics import mean_squared_error, mean_absolute_error"
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
+    "from sklearn.preprocessing import LabelBinarizer"
    ]
   },
   {
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 489,
+   "execution_count": 3,
    "id": "d3da61f397b9ca5d",
    "metadata": {
     "ExecuteTime": {
@@ -85,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 490,
+   "execution_count": 4,
    "id": "c368d2c6cb469623",
    "metadata": {
     "ExecuteTime": {
@@ -125,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 491,
+   "execution_count": 5,
    "id": "e4dc26afbc54f2c0",
    "metadata": {
     "ExecuteTime": {
@@ -158,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 492,
+   "execution_count": 6,
    "id": "b3f21aedd43e6caf",
    "metadata": {
     "ExecuteTime": {
@@ -193,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 493,
+   "execution_count": 7,
    "id": "349242dd",
    "metadata": {},
    "outputs": [],
@@ -216,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 494,
+   "execution_count": 8,
    "id": "cb5cd99f50462dca",
    "metadata": {
     "ExecuteTime": {
@@ -249,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 495,
+   "execution_count": 9,
    "id": "ddf0d8ab318c7c87",
    "metadata": {
     "ExecuteTime": {
@@ -281,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 496,
+   "execution_count": 10,
    "id": "991b48164c403112",
    "metadata": {
     "ExecuteTime": {
@@ -361,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 497,
+   "execution_count": 11,
    "id": "c0f4db781812aba2",
    "metadata": {
     "ExecuteTime": {
@@ -438,7 +439,7 @@
        "33                    0.258951  "
       ]
      },
-     "execution_count": 497,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 498,
+   "execution_count": 12,
    "id": "594104f8545fe00",
    "metadata": {
     "ExecuteTime": {
@@ -534,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 499,
+   "execution_count": 13,
    "id": "791def1b6f809e22",
    "metadata": {
     "ExecuteTime": {
@@ -656,7 +657,7 @@
        "[167 rows x 2 columns]"
       ]
      },
-     "execution_count": 499,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -667,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 500,
+   "execution_count": 14,
    "id": "fdf28ef643836d21",
    "metadata": {
     "ExecuteTime": {
@@ -707,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 501,
+   "execution_count": 15,
    "id": "e2425ec0689e85cb",
    "metadata": {
     "ExecuteTime": {
@@ -820,7 +821,7 @@
        "133    หลักสูตรย่อยที่ 1 พื้นฐานการดูแลสุขภาพสัตว์เลี...  0.183915"
       ]
      },
-     "execution_count": 501,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -884,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 502,
+   "execution_count": 16,
    "id": "d7f11154302384b6",
    "metadata": {
     "ExecuteTime": {
@@ -913,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 503,
+   "execution_count": 17,
    "id": "4bc62956e5c60302",
    "metadata": {
     "ExecuteTime": {
@@ -958,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 504,
+   "execution_count": 18,
    "id": "6f9d7911e888904e",
    "metadata": {
     "ExecuteTime": {
@@ -987,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 505,
+   "execution_count": 19,
    "id": "9b59b739",
    "metadata": {},
    "outputs": [],
@@ -997,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 506,
+   "execution_count": 20,
    "id": "5cc31182ad866b3d",
    "metadata": {
     "ExecuteTime": {
@@ -1026,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 507,
+   "execution_count": 21,
    "id": "9f7ff944",
    "metadata": {},
    "outputs": [
@@ -1068,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 508,
+   "execution_count": 22,
    "id": "9857a9e91a2fd619",
    "metadata": {
     "ExecuteTime": {
@@ -1123,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 509,
+   "execution_count": 29,
    "id": "ecd8ac0f64017b57",
    "metadata": {
     "ExecuteTime": {
@@ -1184,9 +1185,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 601,
+   "execution_count": 93,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>course</th>\n",
+       "      <th>label</th>\n",
+       "      <th>mean</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Cancer Epidemiology and Prevention</td>\n",
+       "      <td>epidemiology</td>\n",
+       "      <td>0.324278</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Coaching Skill : Crafting a New You สำหรับนักศ...</td>\n",
+       "      <td>coaching</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Coaching Skill : Crafting a New You สำหรับบุคล...</td>\n",
+       "      <td>coaching</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Development Studies &amp; Social Research Speciali...</td>\n",
+       "      <td>usac</td>\n",
+       "      <td>0.103844</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Digital Transformation: e-Document</td>\n",
+       "      <td>digital</td>\n",
+       "      <td>0.155729</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Environmental Economics (USAC programs) - Fall...</td>\n",
+       "      <td>usac</td>\n",
+       "      <td>0.192270</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Global Citizenship – โรงเรียนมงฟอร์ตวิทยาลัย ส...</td>\n",
+       "      <td>global</td>\n",
+       "      <td>0.214229</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Global Citizenship – โรงเรียนมงฟอร์ตวิทยาลัย ส...</td>\n",
+       "      <td>global</td>\n",
+       "      <td>0.214229</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Global Citizenship – โรงเรียนสันป่าตองวิทยาคม ...</td>\n",
+       "      <td>global</td>\n",
+       "      <td>0.214229</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Global Citizenship – โรงเรียนแม่ริมวิทยาคม 2566</td>\n",
+       "      <td>global</td>\n",
+       "      <td>0.214229</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              course         label      mean\n",
+       "0                 Cancer Epidemiology and Prevention  epidemiology  0.324278\n",
+       "1  Coaching Skill : Crafting a New You สำหรับนักศ...      coaching  1.000000\n",
+       "2  Coaching Skill : Crafting a New You สำหรับบุคล...      coaching  1.000000\n",
+       "3  Development Studies & Social Research Speciali...          usac  0.103844\n",
+       "4                 Digital Transformation: e-Document       digital  0.155729\n",
+       "5  Environmental Economics (USAC programs) - Fall...          usac  0.192270\n",
+       "6  Global Citizenship – โรงเรียนมงฟอร์ตวิทยาลัย ส...        global  0.214229\n",
+       "7  Global Citizenship – โรงเรียนมงฟอร์ตวิทยาลัย ส...        global  0.214229\n",
+       "8  Global Citizenship – โรงเรียนสันป่าตองวิทยาคม ...        global  0.214229\n",
+       "9    Global Citizenship – โรงเรียนแม่ริมวิทยาคม 2566        global  0.214229"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create a DataFrame from courses and item_list\n",
     "def get_mean(item):\n",
@@ -1209,38 +1320,40 @@
     "    else:\n",
     "        return 'not recommended'\n",
     "    \n",
-    "y = [ get_label(course) for course in courses ]"
+    "y = [ get_label(course) for course in courses ]\n",
+    "\n",
+    "X.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 607,
+   "execution_count": 90,
    "id": "921c70db",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['recommended', 'not recommended', 'not recommended', 'recommended',\n",
-       "       'not recommended', 'recommended', 'not recommended', 'recommended',\n",
-       "       'not recommended', 'not recommended', 'not recommended',\n",
+       "array(['not recommended', 'recommended', 'recommended', 'recommended',\n",
+       "       'recommended', 'not recommended', 'not recommended', 'recommended',\n",
+       "       'recommended', 'recommended', 'not recommended', 'recommended',\n",
        "       'not recommended', 'recommended', 'not recommended',\n",
        "       'not recommended', 'not recommended', 'not recommended',\n",
-       "       'not recommended', 'recommended', 'recommended', 'not recommended',\n",
+       "       'recommended', 'recommended', 'not recommended', 'not recommended',\n",
        "       'recommended', 'recommended', 'recommended', 'recommended',\n",
-       "       'recommended', 'not recommended', 'not recommended',\n",
-       "       'not recommended', 'recommended', 'recommended', 'not recommended',\n",
-       "       'not recommended', 'recommended'], dtype='<U15')"
+       "       'recommended', 'recommended', 'recommended', 'not recommended',\n",
+       "       'not recommended', 'not recommended', 'not recommended',\n",
+       "       'not recommended'], dtype='<U15')"
       ]
      },
-     "execution_count": 607,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Train test split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, shuffle=True)\n",
     "\n",
     "# Create a TF-IDF matrix for the labels\n",
     "vectorizer = TfidfVectorizer(stop_words='english')\n",
@@ -1270,7 +1383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 614,
+   "execution_count": 91,
    "id": "5ef15b47",
    "metadata": {},
    "outputs": [
@@ -1278,8 +1391,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared Error: 0.08823529411764706\n",
-      "Mean Absolute Error: 0.08823529411764706\n"
+      "Mean Squared Error: 0.17647058823529413\n",
+      "Mean Absolute Error: 0.17647058823529413\n"
      ]
     }
    ],
