--- a/tfidf.ipynb
+++ b/tfidf.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 44,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -36,7 +36,7 @@
     "import translators as ts\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
     "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
-    "from sklearn.preprocessing import LabelBinarizer"
+    "import pickle"
    ]
   },
   {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "d3da61f397b9ca5d",
    "metadata": {
     "ExecuteTime": {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c368d2c6cb469623",
    "metadata": {
     "ExecuteTime": {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "e4dc26afbc54f2c0",
    "metadata": {
     "ExecuteTime": {
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "id": "b3f21aedd43e6caf",
    "metadata": {
     "ExecuteTime": {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "349242dd",
    "metadata": {},
    "outputs": [],
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 48,
    "id": "cb5cd99f50462dca",
    "metadata": {
     "ExecuteTime": {
@@ -237,6 +237,24 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Save file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "72a9699b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('tfidf_matrix.pickle', 'wb') as f:\n",
+    "    pickle.dump(tfidf_matrix, f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "163e6b93447bfd83",
    "metadata": {
     "collapsed": false,
@@ -250,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "id": "ddf0d8ab318c7c87",
    "metadata": {
     "ExecuteTime": {
@@ -282,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "991b48164c403112",
    "metadata": {
     "ExecuteTime": {
@@ -362,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 39,
    "id": "c0f4db781812aba2",
    "metadata": {
     "ExecuteTime": {
@@ -439,7 +457,7 @@
        "33                    0.258951  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "594104f8545fe00",
    "metadata": {
     "ExecuteTime": {
@@ -535,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "791def1b6f809e22",
    "metadata": {
     "ExecuteTime": {
@@ -657,7 +675,7 @@
        "[167 rows x 2 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -668,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "fdf28ef643836d21",
    "metadata": {
     "ExecuteTime": {
@@ -708,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "e2425ec0689e85cb",
    "metadata": {
     "ExecuteTime": {
@@ -821,7 +839,7 @@
        "133    หลักสูตรย่อยที่ 1 พื้นฐานการดูแลสุขภาพสัตว์เลี...  0.183915"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -885,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "d7f11154302384b6",
    "metadata": {
     "ExecuteTime": {
@@ -914,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "4bc62956e5c60302",
    "metadata": {
     "ExecuteTime": {
@@ -959,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "6f9d7911e888904e",
    "metadata": {
     "ExecuteTime": {
@@ -988,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "9b59b739",
    "metadata": {},
    "outputs": [],
@@ -998,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "5cc31182ad866b3d",
    "metadata": {
     "ExecuteTime": {
@@ -1027,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "9f7ff944",
    "metadata": {},
    "outputs": [
@@ -1069,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "9857a9e91a2fd619",
    "metadata": {
     "ExecuteTime": {
@@ -1124,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "id": "ecd8ac0f64017b57",
    "metadata": {
     "ExecuteTime": {
@@ -1185,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1293,7 +1311,7 @@
        "9    Global Citizenship – โรงเรียนแม่ริมวิทยาคม 2566        global  0.214229"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1327,26 +1345,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 24,
    "id": "921c70db",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['not recommended', 'recommended', 'recommended', 'recommended',\n",
+       "array(['recommended', 'not recommended', 'not recommended', 'recommended',\n",
        "       'recommended', 'not recommended', 'not recommended', 'recommended',\n",
-       "       'recommended', 'recommended', 'not recommended', 'recommended',\n",
+       "       'not recommended', 'not recommended', 'recommended',\n",
        "       'not recommended', 'recommended', 'not recommended',\n",
-       "       'not recommended', 'not recommended', 'not recommended',\n",
-       "       'recommended', 'recommended', 'not recommended', 'not recommended',\n",
-       "       'recommended', 'recommended', 'recommended', 'recommended',\n",
-       "       'recommended', 'recommended', 'recommended', 'not recommended',\n",
-       "       'not recommended', 'not recommended', 'not recommended',\n",
-       "       'not recommended'], dtype='<U15')"
+       "       'not recommended', 'recommended', 'recommended', 'recommended',\n",
+       "       'not recommended', 'recommended', 'not recommended', 'recommended',\n",
+       "       'not recommended', 'not recommended', 'recommended', 'recommended',\n",
+       "       'recommended', 'not recommended', 'recommended', 'not recommended',\n",
+       "       'recommended', 'not recommended', 'recommended', 'not recommended'],\n",
+       "      dtype='<U15')"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1383,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 25,
    "id": "5ef15b47",
    "metadata": {},
    "outputs": [
@@ -1391,8 +1409,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared Error: 0.17647058823529413\n",
-      "Mean Absolute Error: 0.17647058823529413\n"
+      "Mean Squared Error: 0.29411764705882354\n",
+      "Mean Absolute Error: 0.29411764705882354\n"
      ]
     }
    ],
